--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,9 +9,14 @@ paths:
   aligned_reads: "intermediate_results/aligned_reads/"
   assembled_contigs: "intermediate_results/assembled_contigs/"
   analyzed_metagenome: "results/analyzed_metagenome/"
-  reference_genome: "genome/ncbi_dataset/data/{refseq_id}/{refseq_id}_genomic.fna"
+  reference_genome: "genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna"
   illumina_clip: "intermediate_results/adapters/TruSeq3-PE.fa"
   referance_genome_download: "genome/"
+  adapters: "intermediate_results/adapters/"
+  visualizations: "results/visualizations/"
+  coverage: "results/coverage/"
+  logs: "logs/"
+
 params:
   trimmomatic:
     slidingwindow: "4:15"
@@ -19,4 +24,3 @@ params:
   bwa_mem: "-t 8"
   megahit:
     min_contig_len: "200"
-
