added dynamic pathing

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,171 +1,182 @@
 configfile: "config/config.yaml"
 
+# The rest of your workflow definition follows...
 SAMPLES = config["samples"]
 ruleorder: bwa_index > analyze_metagenome
 
 rule all:
     input:
-        expand("results/analyzed_metagenome/{sample}_genes.gff",sample=SAMPLES),
-        expand("results/analyzed_metagenome/{sample}_proteins.faa",sample=SAMPLES),
-        expand("results/visualizations/{sample}_visualization.pdf",sample=SAMPLES),
-        expand("results/coverage/{sample}_coverage_summary.txt", sample=SAMPLES)
-
+        expand(config["paths"]["analyzed_metagenome"] + "/{sample}_genes.gff", sample=SAMPLES),
+        expand(config["paths"]["analyzed_metagenome"] + "/{sample}_proteins.faa", sample=SAMPLES),
+        expand(config["paths"]["visualizations"] + "/{sample}_visualization.pdf", sample=SAMPLES),
+        expand(config["paths"]["coverage"] + "/{sample}_coverage_summary.txt", sample=SAMPLES)
 
 rule download_reads:
     output:
-        r1=config["paths"]["raw_reads"] + "{sample}_R1.fastq",
-        r2=config["paths"]["raw_reads"] + "{sample}_R2.fastq"
+        r1=config["paths"]["raw_reads"] + "/{sample}_R1.fastq",
+        r2=config["paths"]["raw_reads"] + "/{sample}_R2.fastq"
     params:
         r1=lambda wildcards: config["samples"][wildcards.sample]["R1"],
         r2=lambda wildcards: config["samples"][wildcards.sample]["R2"]
+    log:
+        config["paths"]["logs"] + "/download_reads_{sample}.log"
     shell:
-        """
-        wget -O {output.r1} {params.r1}
-        wget -O {output.r2} {params.r2}
-        """
-
-
-
-rule extract_genome_and_annotations:
-    input:
-        config["paths"]["referance_genome_download"]+ "ncbi_dataset.zip"
-    output:
-        "genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna"
-    shell:
-        "unzip {input} -d genome"
+        "wget -O {output.r1} {params.r1} &> {log}; wget -O {output.r2} {params.r2} &>> {log}"
 
 rule download_adapters:
     output:
-        "intermediate_results/adapters/TruSeq3-PE.fa"
+        config["paths"]["adapters"] + "TruSeq3-PE.fa"
+    log:
+        config["paths"]["logs"] + "/download_adapters.log"
     shell:
         """
-        mkdir -p intermediate_results/adapters
-        curl -L https://raw.githubusercontent.com/usadellab/Trimmomatic/master/adapters/TruSeq3-PE.fa -o {output}
+        curl -L https://raw.githubusercontent.com/usadellab/Trimmomatic/master/adapters/TruSeq3-PE.fa -o {output} &> {log}
         """
 
 rule download_genome_data:
     output:
-        config["paths"]["referance_genome_download"]+ "ncbi_dataset.zip"
+        config["paths"]["referance_genome_download"] + "ncbi_dataset.zip"
+    log:
+        config["paths"]["logs"] + "/download_genome_data.log"
+    shell:
+        "datasets download genome accession GCF_020171115.1 --include gff3,rna,cds,protein,genome,seq-report --filename {output} &> {log}"
+
+rule extract_genome_and_annotations:
+    input:
+        config["paths"]["referance_genome_download"] + "ncbi_dataset.zip"
+    output:
+        fna="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna",
+        gff="genome/ncbi_dataset/data/GCF_020171115.1/genomic.gff"
+    log:
+        config["paths"]["logs"] + "/extract_genome_and_annotations.log"
     shell:
         """
-        datasets download genome accession GCF_020171115.1 --include gff3,rna,cds,protein,genome,seq-report --filename genome/ncbi_dataset.zip
+        unzip -o {input} -d genome/ &> {log}
         """
 
 rule trim_reads:
     input:
-        r1=config["paths"]["raw_reads"] + "{sample}_R1.fastq",
-        r2=config["paths"]["raw_reads"] + "{sample}_R2.fastq",
-        adapters="intermediate_results/adapters/TruSeq3-PE.fa"
+        r1=config["paths"]["raw_reads"] + "/{sample}_R1.fastq",
+        r2=config["paths"]["raw_reads"] + "/{sample}_R2.fastq",
+        adapters=config["paths"]["adapters"] + "TruSeq3-PE.fa"
     output:
-        trimmed_r1=config["paths"]["trimmed_reads"] + "{sample}_R1_trimmed.fq",
-        trimmed_r2=config["paths"]["trimmed_reads"] + "{sample}_R2_trimmed.fq"
+        trimmed_r1=config["paths"]["trimmed_reads"] + "/{sample}_R1_trimmed.fq",
+        trimmed_r2=config["paths"]["trimmed_reads"] + "/{sample}_R2_trimmed.fq"
+    log:
+        config["paths"]["logs"] + "/trim_reads_{sample}.log"
     shell:
         """
-        trimmomatic PE {input.r1} {input.r2} {output.trimmed_r1} {output.trimmed_r1}_unpaired.fq {output.trimmed_r2} {output.trimmed_r2}_unpaired.fq \
-        ILLUMINACLIP:{input.adapters}:2:30:10 SLIDINGWINDOW:4:15 MINLEN:36
+        trimmomatic PE {input.r1} {input.r2} {output.trimmed_r1} {output.trimmed_r1}_unpaired.fq {output.trimmed_r2} {output.trimmed_r2}_unpaired.fq ILLUMINACLIP:{input.adapters}:2:30:10 SLIDINGWINDOW:4:15 MINLEN:36 &> {log}
         """
 
 rule bwa_index:
     input:
-        ref="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna"
+        ref=config["paths"]["reference_genome"]
     output:
-        amb="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.amb",
-        ann="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.ann",
-        bwt="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.bwt",
-        pac="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.pac",
-        sa="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.sa"
+        amb=config["paths"]["reference_genome"] + ".amb",
+        ann=config["paths"]["reference_genome"] + ".ann",
+        bwt=config["paths"]["reference_genome"] + ".bwt",
+        pac=config["paths"]["reference_genome"] + ".pac",
+        sa=config["paths"]["reference_genome"] + ".sa"
+    log:
+        config["paths"]["logs"] + "/bwa_index.log"
     shell:
-        "bwa index {input.ref}"
+        "bwa index {input.ref} &> {log}"
 
 rule align_reads:
     input:
-        r1="intermediate_results/trimmed_reads/{sample}_R1_trimmed.fq",
-        r2="intermediate_results/trimmed_reads/{sample}_R2_trimmed.fq",
-        ref="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna",
-        index_amb="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.amb",
-        index_ann="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.ann",
-        index_bwt="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.bwt",
-        index_pac="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.pac",
-        index_sa="genome/ncbi_dataset/data/GCF_020171115.1/GCF_020171115.1_ASM_NN_V1_genomic.fna.sa"
+        r1=config["paths"]["trimmed_reads"] + "/{sample}_R1_trimmed.fq",
+        r2=config["paths"]["trimmed_reads"] + "/{sample}_R2_trimmed.fq",
+        ref=config["paths"]["reference_genome"],
+        amb=config["paths"]["reference_genome"] + ".amb",
+        ann=config["paths"]["reference_genome"] + ".ann",
+        bwt=config["paths"]["reference_genome"] + ".bwt",
+        pac=config["paths"]["reference_genome"] + ".pac",
+        sa=config["paths"]["reference_genome"] + ".sa"
     output:
-        bam="intermediate_results/aligned_reads/{sample}.unsorted.bam"
+        bam=config["paths"]["aligned_reads"] + "/{sample}.unsorted.bam"
+    log:
+        config["paths"]["logs"] + "/align_reads_{sample}.log"
     shell:
-        "bwa mem -t 2 {input.ref} {input.r1} {input.r2} | samtools view -Sb - > {output.bam}"
+        "bwa mem -t 2 {input.ref} {input.r1} {input.r2} | samtools view -Sb - > {output.bam} 2> {log}"
 
 rule sort_bam:
     input:
-        "intermediate_results/aligned_reads/{sample}.unsorted.bam"
+        bam=config["paths"]["aligned_reads"] + "/{sample}.unsorted.bam"
     output:
-        "intermediate_results/aligned_reads/{sample}.sorted.bam"
+        sorted_bam=config["paths"]["aligned_reads"] + "/{sample}.sorted.bam"
+    log:
+        config["paths"]["logs"] + "/sort_bam_{sample}.log"
     shell:
-        """
-        samtools sort {input} -o {output}
-        """
+        "samtools sort {input.bam} -o {output.sorted_bam} 2> {log}"
 
 rule index_bam:
     input:
-        "intermediate_results/aligned_reads/{sample}.sorted.bam"
+        sorted_bam=config["paths"]["aligned_reads"] + "/{sample}.sorted.bam"
     output:
-        "intermediate_results/aligned_reads/{sample}.sorted.bam.bai"
+        bai=config["paths"]["aligned_reads"] + "/{sample}.sorted.bam.bai"
+    log:
+        config["paths"]["logs"] + "/index_bam_{sample}.log"
     shell:
-        "samtools index {input}"
+        "samtools index {input.sorted_bam} 2> {log}"
 
 rule gff_to_bed:
     input:
         gff="genome/ncbi_dataset/data/GCF_020171115.1/genomic.gff"
     output:
-        bed="genome/ncbi_dataset/data/GCF_020171115.1/genomic.bed"
+        bed=config["paths"]["reference_genome"] + ".bed"
+    log:
+        "logs/gff_to_bed.log"
     shell:
         """
-        awk '!/^#/ {{print $1, $4-1, $5, $9, ".", $7}}' {input.gff} > {output.bed}
+        awk '!/^#/ {{print $1, $4-1, $5, $9, ".", $7}}' {input.gff} > {output.bed} 2> {log}
         """
 
 rule calculate_coverage:
     input:
-        bam="intermediate_results/aligned_reads/{sample}.sorted.bam",
-        bai="intermediate_results/aligned_reads/{sample}.sorted.bam.bai",
-        bed="genome/ncbi_dataset/data/GCF_020171115.1/genomic.bed"
+        bam=config["paths"]["aligned_reads"] + "/{sample}.sorted.bam",
+        bed=config["paths"]["reference_genome"] + ".bed"
     output:
-        "results/coverage/{sample}_coverage_summary.txt"
+        summary=config["paths"]["coverage"] + "/{sample}_coverage_summary.txt"
+    log:
+        config["paths"]["logs"] + "/calculate_coverage_{sample}.log"
     shell:
-        """
-        samtools depth -a -b {input.bed} {input.bam} | \
-        awk 'BEGIN{{total=0; covered=0; sum=0}} {{if ($3>0) covered++; total++; sum+=$3}} END{{print "Average coverage: "sum/total"\\nPercentage covered: "covered/total*100}}' > {output}
-        """
+        "samtools depth -a -b {input.bed} {input.bam} | awk 'BEGIN{total=0; covered=0; sum=0} {if ($3>0) covered++; total++; sum+=$3} END{print \"Average coverage: \"sum/total\"\\nPercentage covered: \"covered/total*100}' > {output.summary} 2> {log}"
 
 rule assemble_contigs:
     input:
-        trimmed_r1="intermediate_results/trimmed_reads/{sample}_R1_trimmed.fq",
-        trimmed_r2="intermediate_results/trimmed_reads/{sample}_R2_trimmed.fq"
+        trimmed_r1=config["paths"]["trimmed_reads"] + "/{sample}_R1_trimmed.fq",
+        trimmed_r2=config["paths"]["trimmed_reads"] + "/{sample}_R2_trimmed.fq"
     output:
-        contigs="intermediate_results/assembled_contigs/{sample}/final.contigs.fa"  # Explicit output file
+        contigs=config["paths"]["assembled_contigs"] + "/{sample}/final.contigs.fa"
     params:
         min_contig_len=config['params']['megahit']['min_contig_len'],
-        output_dir=lambda wildcards: f"intermediate_results/assembled_contigs/{wildcards.sample}"
+        output_dir=lambda wildcards: config["paths"]["assembled_contigs"] + "/{sample}"
+    log:
+        config["paths"]["logs"] + "/assemble_contigs_{sample}.log"
     shell:
-        """
-        rm -rf {params.output_dir}
-        megahit -1 {input.trimmed_r1} -2 {input.trimmed_r2} --min-contig-len {params.min_contig_len} -o {params.output_dir}
-        """
+        "rm -rf {params.output_dir} && megahit -1 {input.trimmed_r1} -2 {input.trimmed_r2} --min-contig-len {params.min_contig_len} -o {params.output_dir} &> {log}"
 
 rule analyze_metagenome:
     input:
-        contigs="intermediate_results/assembled_contigs/{sample}/final.contigs.fa"
+        contigs=config["paths"]["assembled_contigs"] + "/{sample}/final.contigs.fa"
     output:
-        genes="results/analyzed_metagenome/{sample}_genes.gff",
-        proteins="results/analyzed_metagenome/{sample}_proteins.faa"
+        genes=config["paths"]["analyzed_metagenome"] + "/{sample}_genes.gff",
+        proteins=config["paths"]["analyzed_metagenome"] + "/{sample}_proteins.faa"
+    log:
+        config["paths"]["logs"] + "/analyze_metagenome_{sample}.log"
     shell:
-        """
-        prodigal -i {input.contigs} -a {output.proteins} -o {output.genes} -p meta
-        """
+        "prodigal -i {input.contigs} -a {output.proteins} -o {output.genes} -p meta &> {log}"
 
 rule visualize_results:
     input:
-        genes_gff="results/analyzed_metagenome/{sample}_genes.gff",
-        proteins_faa="results/analyzed_metagenome/{sample}_proteins.faa",
-        summary="results/coverage/{sample}_coverage_summary.txt",
-        contigs="intermediate_results/assembled_contigs/{sample}/final.contigs.fa"
+        genes_gff=config["paths"]["analyzed_metagenome"] + "/{sample}_genes.gff",
+        proteins_faa=config["paths"]["analyzed_metagenome"] + "/{sample}_proteins.faa",
+        summary=config["paths"]["coverage"] + "/{sample}_coverage_summary.txt",
+        contigs=config["paths"]["assembled_contigs"] + "/{sample}/final.contigs.fa"
     output:
-        visualization="results/visualizations/{sample}_visualization.pdf"
+        visualization=config["paths"]["visualizations"] + "/{sample}_visualization.pdf"
+    log:
+        config["paths"]["logs"] + "/visualize_results_{sample}.log"
     script:
         "scripts/visualizer.R"
