--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -67,18 +67,28 @@ rule trim_reads:
         r2=config["paths"]["raw_reads"] + "{sample}_R2.fastq",
         adapters=config["paths"]["adapters"] + "TruSeq3-PE.fa"
     output:
-        trimmed_r1=config["paths"]["trimmed_reads"] + "{sample}_R1_trimmed.fq",
-        trimmed_r2=config["paths"]["trimmed_reads"] + "{sample}_R2_trimmed.fq"
+        r1=config["paths"]["trimmed_reads"] + "{sample}_R1_trimmed.fq",
+        r1_unpaired=config["paths"]["trimmed_reads"] + "{sample}_R1_unpaired.fq",
+        r2=config["paths"]["trimmed_reads"] + "{sample}_R2_trimmed.fq",
+        r2_unpaired=config["paths"]["trimmed_reads"] + "{sample}_R2_unpaired.fq"
     log:
         config["paths"]["logs"] + "trim_reads_{sample}.log"
+    params:
+        trimmer=["ILLUMINACLIP:{input.adapters}:2:30:10", "SLIDINGWINDOW:4:15", "MINLEN:36"],
+        threads=1
     wrapper:
-        "v3.12.1/bio/trimmomatic/pe"
+        "0.38.0/bio/trimmomatic/pe"
 
 rule bwa_index:
     input:
         ref=config["paths"]["reference_genome"]
     output:
-        touch("genome.indexed")
+        touch("genome.indexed"),
+        amb=config["paths"]["reference_genome"] + ".amb",
+        ann=config["paths"]["reference_genome"] + ".ann",
+        bwt=config["paths"]["reference_genome"] + ".bwt",
+        pac=config["paths"]["reference_genome"] + ".pac",
+        sa=config["paths"]["reference_genome"] + ".sa"
     log:
         config["paths"]["logs"] + "/bwa_index.log"
     wrapper:
@@ -89,6 +99,11 @@ rule align_reads:
         r1=config["paths"]["trimmed_reads"] + "{sample}_R1_trimmed.fq",
         r2=config["paths"]["trimmed_reads"] + "{sample}_R2_trimmed.fq",
         ref=config["paths"]["reference_genome"],
+        amb=config["paths"]["reference_genome"] + ".amb",
+        ann=config["paths"]["reference_genome"] + ".ann",
+        bwt=config["paths"]["reference_genome"] + ".bwt",
+        pac=config["paths"]["reference_genome"] + ".pac",
+        sa=config["paths"]["reference_genome"] + ".sa",
         indexed="genome.indexed"
     output:
         bam=config["paths"]["aligned_reads"] + "{sample}.unsorted.bam"
