--- a/enviroment.yml
+++ b/enviroment.yml
@@ -6,6 +6,7 @@ channels:
 dependencies:
   - python=3.9
   - snakemake=7.8.0
+  - snakemake-wrapper-utils=0.1.3
   - r-base=4.1.0
   - r-ggplot2
   - r-dplyr
@@ -13,7 +14,7 @@ dependencies:
   - r-readr
   - r-pheatmap
   - r-ggridges
-  - r-circlize
+  - r-circlizev
   - bioconductor-biostrings
   - bioconductor-genomicranges
   - bioconductor-genomicalignments
@@ -24,6 +25,7 @@ dependencies:
   - samtools=1.15
   - megahit=1.2.9
   - trimmomatic=0.39
+  - pigz=2.3.4
   - ncbi-datasets-cli=16.10.1
   - prodigal
   - r-igraph
