--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -99,18 +99,15 @@ rule align_reads:
         r1=config["paths"]["trimmed_reads"] + "{sample}_R1_trimmed.fq",
         r2=config["paths"]["trimmed_reads"] + "{sample}_R2_trimmed.fq",
         ref=config["paths"]["reference_genome"],
-        amb=config["paths"]["reference_genome"] + ".amb",
-        ann=config["paths"]["reference_genome"] + ".ann",
-        bwt=config["paths"]["reference_genome"] + ".bwt",
-        pac=config["paths"]["reference_genome"] + ".pac",
-        sa=config["paths"]["reference_genome"] + ".sa",
         indexed="genome.indexed"
     output:
         bam=config["paths"]["aligned_reads"] + "{sample}.unsorted.bam"
     log:
         config["paths"]["logs"] + "/align_reads_{sample}.log"
-    wrapper:
-        "0.83.0/bio/bwa/mem"
+    shell:
+        """
+        bwa mem -t 2 {input.ref} {input.r1} {input.r2} | samtools view -Sb - > {output.bam} 2> {log}
+        """
 
 rule sort_bam:
     input:
@@ -130,7 +127,7 @@ rule index_bam:
     log:
         "logs/index_bam_{sample}.log"
     wrapper:
-        "0.84.0/bio/samtools/index"
+        "v3.12.1/bio/samtools/index"
 
 rule gff_to_bed:
     input:
