--- a/enviroment.yml
+++ b/enviroment.yml
@@ -2,6 +2,7 @@ name: ngs-analysis-core
 channels:
   - conda-forge
   - bioconda
+  - defaults
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
